--- a/src/components/SegmentInput/styles.css
+++ b/src/components/SegmentInput/styles.css
@@ -1,18 +1,24 @@
-.segment {
-    &:first-child {
-        border-top-right-radius: 0;
-        border-bottom-right-radius: 0;
+.segment-input {
+    .list {
+        gap: 0;
     }
 
-    &:last-child {
-        border-top-left-radius: 0;
-        border-bottom-left-radius: 0;
-    }
+    .segment {
+        &:first-child {
+            border-top-right-radius: 0;
+            border-bottom-right-radius: 0;
+        }
 
-    &:not(:first-child) {
-        &:not(:last-child) {
-            border-radius: 0;
+        &:last-child {
+            border-top-left-radius: 0;
+            border-bottom-left-radius: 0;
+        }
+
+        &:not(:first-child) {
+            &:not(:last-child) {
+                border-radius: 0;
+            }
         }
     }
-
 }
+
